# WBB

./: .gitignore  README.md
.github/workflows/: build-sites.yml
cli/: README.md  pyproject.toml
cli/tests/: test_scorer.py
cli/wbb_eval/: __init__.py  __main__.py  ground_truth.py  llm_matcher.py  qabot_client.py  scorer.py
eval/: STATUS.md
infra/: clusterissuer-letsencrypt.yaml  ghcr-secret.yaml.tmpl  namespace.yaml  site-template.yaml
scripts/: deploy-site.sh  seed-ghcr-secret.sh
sites/auth-portal/: .dockerignore  Dockerfile  bugs.yaml  package.json
sites/auth-portal/app/: globals.css  layout.tsx  page.tsx
sites/auth-portal/lib/: auth.ts
sites/booking-calendar/: Dockerfile  bugs.yaml  package.json
sites/booking-calendar/app/: globals.css  layout.tsx  page.tsx
sites/booking-calendar/lib/: booking.ts
sites/dashboard-tasks/: Dockerfile  bugs.yaml  package.json  tsconfig.tsbuildinfo
sites/dashboard-tasks/app/: globals.css  layout.tsx  page.tsx
sites/dashboard-tasks/lib/: tasks.ts
sites/ecom-mini/: Dockerfile  bugs.yaml  package.json
sites/ecom-mini/app/: globals.css  layout.tsx  page.tsx
sites/ecom-mini/lib/: cart.ts  products.ts
sites/form-multistep/: Dockerfile  bugs.yaml  package.json
sites/form-multistep/app/: globals.css  layout.tsx  page.tsx
sites/form-multistep/lib/: form.ts
sites/kanban-board/: Dockerfile  bugs.yaml  package.json
sites/lovable-library/: bugs.yaml  site.yaml
sites/search-autocomplete/: Dockerfile  bugs.yaml  package.json
sites/store-filters/: Dockerfile  bugs.yaml  next.config.mjs  package.json
(+23 files in other folders)
