[project]
name = "wbb-eval"
version = "0.1.0"
description = "WebBugBench evaluator CLI"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.scripts]
wbb-eval = "wbb_eval.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wbb_eval*"]
